--- a/FreightBKShippingWebApp/FreightBKShippingWebApp.csproj
+++ b/FreightBKShippingWebApp/FreightBKShippingWebApp.csproj
@@ -6,6 +6,8 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="DevExpress.Blazor" Version="24.1.3" />
+    <PackageReference Include="DevExpress.Reporting.Core" Version="24.1.3" />
+	  <PackageReference Include="DevExpress.Blazor.Reporting.Viewer" Version="24.1.3" />
 	  <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 	  <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.12.1" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.7" />
